# CCBridge

./: CMakeLists.txt  PrepareBuild.bat  README.md  Run.bat
assets/lua/: README.md  simple_controllable_turtle.lua  simple_gps_setup.lua
src/: DebugNode.h  main.cpp
src/net/: Server.cpp  Server.h
src/net/peripherals/: BasePeripheral.h  ModemPeripheral.h
src/net/turtle/: Inventory.h  Turtle.h
src/nodes/: CommandsNode.h  NodeBase.h  Nodes.h  ProfilerNode.h  ServerNode.h  TurtleListNode.h
src/registry/: TurtleRegistry.h
src/util/: FacingUtil.h  IdUtil.h  Logger.h  NetworkUtil.h  Pallette.h  PositionUtil.h  RaylibPalette.h  Vec3.h  timeUtil.h
